Added task tracker, added pics page, more content on home page

--- a/src/projects/data/projects.json
+++ b/src/projects/data/projects.json
@@ -17,7 +17,7 @@
     "title": "Weather Driven Traffic Forcasting",
     "git": "https://github.com/jennder/DCRNN_PyTorch/tree/weather_model",
     "dates": "2019",
-    "summary": "Final project for introduction to computer science research. Aimed to extend the ",
+    "summary": "Final project for introduction to computer science research. Aimed to extend the Diffuse Concurrent Neural Network from (Li et al. 2017) to include weather prediciton data to challange the prior that traffic patterns are a closed system.<br/>Project incomplete within the allotted course time.",
     "image": "./dcrnn_icon.png",
     "abandoned": true
   },
@@ -25,7 +25,7 @@
     "title": "Santorini",
     "git": "https://github.com/jennder/DCRNN_PyTorch/tree/weather_model",
     "date": "2018",
-    "summary": "Final project for introduction to computer science research. Aimed to extend the ",
+    "summary": "An implementation of the 2004 Kickstarter game Santorini. Players take turns building a town by placing pieces. Once a player moves to the thrid level of a town, that player wins. The game supports player vs. player, player vs. AI, and AI vs. AI, where players can propose TCP connected AIs to match against one another.",
     "image": "./santorini_box_art.png"
   },
   {
@@ -34,5 +34,12 @@
     "dates": "2019",
     "summary": "Web application for managing a swim league developed as a final project for CS 3200 Database Design. The project uses MySQL as its DBSM, and has a SpringBoot backend with a React and Bootstrap client.",
     "image": "./my_sql_icon.jpg"
+  },
+  {
+    "title": "Task Tracker",
+    "git": "https://github.com/shanetimmerman/task_tracker_single_page_app",
+    "dates": "2018",
+    "summary": "Web app allowing users to manage tasks for themselves and their subordinates. The application is written in Elixir and React, using the Phoenix framework and Redux.",
+    "image": "./phoenix_icon.png"
   }
 ]
