--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://www.shanetimmerman.com",
+  "engines": {
+    "npm": "6.11.3",
+    "node": "10.17.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.3",
