Fixed getting custom theming

--- a/src/semantic-ui/theme.config
+++ b/src/semantic-ui/theme.config
@@ -77,22 +77,10 @@
             Folders
 *******************************/
 
-/* Path to theme packages */
-/* @themesFolder : 'themes'; */
-
-/* Path to site override folder */
-/* @siteFolder  : 'site'; */
-
 @themesFolder : 'themes';
-@siteFolder  : '../../semantic/src/site';
+@siteFolder  : '../../src/semantic-ui/site';
 
 @import (multiple) "~semantic-ui-less/theme.less";
 @fontPath : '../../../themes/@{theme}/assets/fonts';
-
-/*******************************
-         Import Theme
-*******************************/
-
-/* @import (multiple) "theme.less"; */
 
 /* End Config */
