--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.3",
     "@testing-library/user-event": "^7.1.2",
+    "animejs": "^3.2.0",
     "gh-pages": "^2.1.1",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "^2.3.1",
     "lodash": "^4.17.15",
     "pure-react-carousel": "^1.24.1",
     "react": "^16.12.0",
+    "react-anime": "^3.0.3",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
