--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.12.0",
     "react-mt-svg-lines": "^0.9.1",
     "react-photo-gallery": "^8.0.0",
+    "react-responsive-carousel": "^3.2.10",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-scroll-to-component": "^1.0.2",
